# rust-tapyruscore-rpc

.github/workflows/: rust.yml
client/: Cargo.toml  README.md
client/examples/: retry_client.rs  test_against_node.rs
client/src/: client.rs  error.rs  lib.rs  queryable.rs
contrib/: integration_test.sh
integration_test/: Cargo.toml  run.sh
integration_test/src/: main.rs
json/: Cargo.toml  README.md
json/src/: lib.rs
