[package]
name = "tapyruscore-rpc-json"
version = "0.1.0"
authors = [
    "Steven Roose <steven@stevenroose.org>",
    "Jean Pierre Dudey <jeandudey@hotmail.com>",
    "Dawid Ciężarkiewicz <dpc@dpc.pw>"
]
license = "CC0-1.0"
homepage = "https://github.com/chaintope/rust-tapuruscore-rpc/"
repository = "https://github.com/chaintope/rust-tapuruscore-rpc/"
description = "JSON-enabled type structs for tapuruscore-rpc crate."
keywords = [ "crypto", "tapurus", "tapurus-core", "rpc" ]
readme = "README.md"
edition = "2021"
rust-version = "1.56.1"

[lib]
name = "tapyruscore_rpc_json"
path = "src/lib.rs"

[features]
default = ["rand"]
rand = ["tapyrus/rand-std"]

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"

# tapurus = { version = "0.32.0", features = ["serde"] }
tapyrus = { git = "https://github.com/chaintope/rust-tapyrus", branch = "update_on_bitcoin_0.31.x", features = ["serde"] }
